Basic cart screen

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -38,3 +38,18 @@ select{
   box-shadow: none !important;
   border-color: black !important;
 }
+
+.fa-plus{
+  color: green;
+  margin: 5px;
+}
+
+.fa-minus{
+  color:red;
+  margin: 5px;
+}
+
+.fa-trash{
+  color:red;
+  margin: 5px;
+}
