--- a/client/src/index.css
+++ b/client/src/index.css
@@ -41,7 +41,7 @@ code {
   color: #FFF3E2 !important;
 }
 
-.dropdown-toggle{
+#dropdownMenuLink{
   color: #f7d3ae !important;
 }
 /* 
@@ -262,10 +262,10 @@ input[type=date]::-webkit-calendar-picker-indicator {
   display: none;
 }
 
-.booking-dropdown {
+#booking-dropdown {
   width: 85%;
   padding: 4% 0;
-  background-color: #e74c3c;
+  background-color: #e74c3c; 
   color: white;
   margin: 2% 0;
   font-family: "Roboto";
@@ -274,27 +274,28 @@ input[type=date]::-webkit-calendar-picker-indicator {
   border-radius: 5px;
   text-align: center;
 }
-.booking-dropdown:hover {
-  background-color: #e74c3c;
-  color: white;
+#booking-dropdown:hover {
+  color: #e74c3c;
+  background-color: white !important;
+  border: 2px solid #e74c3c !important;
 }
-.booking-dropdown:focus {
+#booking-dropdown:focus {
   outline: none;
   box-shadow: none;
 }
-.booking-dropdown-menu {
+#booking-dropdown-menu {
   outline: none;
 }
-.booking-dropdown-item:hover {
+#booking-dropdown-item:hover {
   background-color: white;
 }
-.booking-dropdown-item:active {
+#booking-dropdown-item:active {
   background-color: white;
   color: black;
 }
 
 @media (min-width: 768px) {
-  .booking-dropdown {
+  #booking-dropdown {
     font-size: 1.2rem;
   }
 }
@@ -432,4 +433,4 @@ input[type=date]::-webkit-calendar-picker-indicator {
   }
 }
 
-/*# sourceMappingURL=index.css.map */
+
